tests/ast_error_description/ast_error_description.exp
Error ------------------------------------------------------- expression.js:15:2

Error: expression.js:15
 15: ((([]: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^ Cannot cast `[].p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   15: ((([]: empty): T).p: empty);
                            ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:15:4

Error: expression.js:15
 15: ((([]: empty): T).p: empty);
        ^^ Cannot cast array literal to empty because empty array literal [1] is incompatible with empty [2].
  References:
   15: ((([]: empty): T).p: empty);
          ^^ [1]: empty array literal
   15: ((([]: empty): T).p: empty);
              ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:16:2

Error: expression.js:16
 16: ((([1]: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^ Cannot cast `[...].p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   16: ((([1]: empty): T).p: empty);
                             ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:16:4

Error: expression.js:16
 16: ((([1]: empty): T).p: empty);
        ^^^ Cannot cast array literal to empty because array literal [1] is incompatible with empty [2].
  References:
   16: ((([1]: empty): T).p: empty);
          ^^^ [1]: array literal
   16: ((([1]: empty): T).p: empty);
               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:17:2

Error: expression.js:17
 17: ((([1, 2, 3]: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `[...].p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   17: ((([1, 2, 3]: empty): T).p: empty);
                                   ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:17:4

Error: expression.js:17
 17: ((([1, 2, 3]: empty): T).p: empty);
        ^^^^^^^^^ Cannot cast array literal to empty because array literal [1] is incompatible with empty [2].
  References:
   17: ((([1, 2, 3]: empty): T).p: empty);
          ^^^^^^^^^ [1]: array literal
   17: ((([1, 2, 3]: empty): T).p: empty);
                     ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:18:2

Error: expression.js:18
 18: (((() => {}: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `((...) => { ... }).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   18: (((() => {}: empty): T).p: empty);
                                  ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:18:4

Error: expression.js:18
 18: (((() => {}: empty): T).p: empty);
        ^^^^^^^^ Cannot cast function to empty because function [1] is incompatible with empty [2].
  References:
   18: (((() => {}: empty): T).p: empty);
          ^^^^^^^^ [1]: function
   18: (((() => {}: empty): T).p: empty);
                    ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:19:2

Error: expression.js:19
 19: (((() => 42: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `((...) => 42).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   19: (((() => 42: empty): T).p: empty);
                                  ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:19:4

Error: expression.js:19
 19: (((() => 42: empty): T).p: empty);
        ^^^^^^^^ Cannot cast function to empty because function [1] is incompatible with empty [2].
  References:
   19: (((() => 42: empty): T).p: empty);
          ^^^^^^^^ [1]: function
   19: (((() => 42: empty): T).p: empty);
                    ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:20:2

Error: expression.js:20
 20: (((() => ({}): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `((...) => ({...})).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   20: (((() => ({}): empty): T).p: empty);
                                    ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:20:4

Error: expression.js:20
 20: (((() => ({}): empty): T).p: empty);
        ^^^^^^^^^^ Cannot cast function to empty because function [1] is incompatible with empty [2].
  References:
   20: (((() => ({}): empty): T).p: empty);
          ^^^^^^^^^^ [1]: function
   20: (((() => ({}): empty): T).p: empty);
                      ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:21:2

Error: expression.js:21
 21: ((((a = 42): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `(a = 42).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   21: ((((a = 42): empty): T).p: empty);
                                  ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:21:9

Error: expression.js:21
 21: ((((a = 42): empty): T).p: empty);
             ^^ Cannot cast `a = 42` to empty because number [1] is incompatible with empty [2].
  References:
   21: ((((a = 42): empty): T).p: empty);
               ^^ [1]: number
   21: ((((a = 42): empty): T).p: empty);
                    ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:22:2

Error: expression.js:22
 22: ((((a >>>= 42): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `(a >>>= 42).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   22: ((((a >>>= 42): empty): T).p: empty);
                                     ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:22:5

Error: expression.js:22
 22: ((((a >>>= 42): empty): T).p: empty);
         ^ Cannot cast `a >>>= 42` to empty because number [1] is incompatible with empty [2].
  References:
   21: ((((a = 42): empty): T).p: empty);
               ^^ [1]: number
   22: ((((a >>>= 42): empty): T).p: empty);
                       ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:23:2

Error: expression.js:23
 23: (((({a} = {a: 42}): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `({...} = {...}).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   23: (((({a} = {a: 42}): empty): T).p: empty);
                                         ^^^^^ [2]: empty

Error ------------------------------------------------------ expression.js:23:11

Error: expression.js:23
 23: (((({a} = {a: 42}): empty): T).p: empty);
               ^^^^^^^ Cannot cast `{...} = {...}` to empty because object literal [1] is incompatible with empty [2].
  References:
   23: (((({a} = {a: 42}): empty): T).p: empty);
                 ^^^^^^^ [1]: object literal
   23: (((({a} = {a: 42}): empty): T).p: empty);
                           ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:24:2

Error: expression.js:24
 24: (((([a] = [42]): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `([...] = [...]).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   24: (((([a] = [42]): empty): T).p: empty);
                                      ^^^^^ [2]: empty

Error ------------------------------------------------------ expression.js:24:11

Error: expression.js:24
 24: (((([a] = [42]): empty): T).p: empty);
               ^^^^ Cannot cast `[...] = [...]` to empty because array literal [1] is incompatible with empty [2].
  References:
   24: (((([a] = [42]): empty): T).p: empty);
                 ^^^^ [1]: array literal
   24: (((([a] = [42]): empty): T).p: empty);
                        ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:25:2

Error: expression.js:25
 25: ((((a = a = 42): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `(a = a = 42).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   25: ((((a = a = 42): empty): T).p: empty);
                                      ^^^^^ [2]: empty

Error ------------------------------------------------------ expression.js:25:13

Error: expression.js:25
 25: ((((a = a = 42): empty): T).p: empty);
                 ^^ Cannot cast `a = a = 42` to empty because number [1] is incompatible with empty [2].
  References:
   25: ((((a = a = 42): empty): T).p: empty);
                   ^^ [1]: number
   25: ((((a = a = 42): empty): T).p: empty);
                        ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:26:2

Error: expression.js:26
 26: (((1 + 2: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^ Cannot cast `(1 + 2).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   26: (((1 + 2: empty): T).p: empty);
                               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:26:4

Error: expression.js:26
 26: (((1 + 2: empty): T).p: empty);
        ^^^^^ Cannot cast `1 + 2` to empty because number [1] is incompatible with empty [2].
  References:
   26: (((1 + 2: empty): T).p: empty);
          ^^^^^ [1]: number
   26: (((1 + 2: empty): T).p: empty);
                 ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:27:2

Error: expression.js:27
 27: (((1 + 2 + 3: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `(1 + 2 + 3).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   27: (((1 + 2 + 3: empty): T).p: empty);
                                   ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:27:4

Error: expression.js:27
 27: (((1 + 2 + 3: empty): T).p: empty);
        ^^^^^^^^^ Cannot cast `1 + 2 + 3` to empty because number [1] is incompatible with empty [2].
  References:
   27: (((1 + 2 + 3: empty): T).p: empty);
          ^^^^^^^^^ [1]: number
   27: (((1 + 2 + 3: empty): T).p: empty);
                     ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:28:2

Error: expression.js:28
 28: (((1 - (2 + 3): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `(1 - (2 + 3)).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   28: (((1 - (2 + 3): empty): T).p: empty);
                                     ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:28:4

Error: expression.js:28
 28: (((1 - (2 + 3): empty): T).p: empty);
        ^^^^^^^^^^^ Cannot cast `1 - (2 + 3)` to empty because number [1] is incompatible with empty [2].
  References:
   28: (((1 - (2 + 3): empty): T).p: empty);
          ^^^^^^^^^^^ [1]: number
   28: (((1 - (2 + 3): empty): T).p: empty);
                       ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:29:2

Error: expression.js:29
 29: ((((1 + 2) * (3 + 4): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `((1 + 2) * (3 + 4)).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   29: ((((1 + 2) * (3 + 4): empty): T).p: empty);
                                           ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:29:4

Error: expression.js:29
 29: ((((1 + 2) * (3 + 4): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^ Cannot cast `(1 + 2) * (3 + 4)` to empty because number [1] is incompatible with empty [2].
  References:
   29: ((((1 + 2) * (3 + 4): empty): T).p: empty);
          ^^^^^^^^^^^^^^^^^ [1]: number
   29: ((((1 + 2) * (3 + 4): empty): T).p: empty);
                             ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:30:2

Error: expression.js:30
 30: (((1 + 2 * (3 + 4): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `(1 + (2 * (3 + 4))).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   30: (((1 + 2 * (3 + 4): empty): T).p: empty);
                                         ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:30:4

Error: expression.js:30
 30: (((1 + 2 * (3 + 4): empty): T).p: empty);
        ^^^^^^^^^^^^^^^ Cannot cast `1 + (2 * (3 + 4))` to empty because number [1] is incompatible with empty [2].
  References:
   30: (((1 + 2 * (3 + 4): empty): T).p: empty);
          ^^^^^^^^^^^^^^^ [1]: number
   30: (((1 + 2 * (3 + 4): empty): T).p: empty);
                           ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:31:2

Error: expression.js:31
 31: (((f(): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^ Cannot cast `f().p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   31: (((f(): empty): T).p: empty);
                             ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:31:4

Error: expression.js:31
 31: (((f(): empty): T).p: empty);
        ^^^ Cannot cast `f()` to empty because mixed [1] is incompatible with empty [2].
  References:
    9: const f = (x: mixed): mixed => x;
                             ^^^^^ [1]: mixed
   31: (((f(): empty): T).p: empty);
               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:32:2

Error: expression.js:32
 32: (((f(42): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^ Cannot cast `f(...).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   32: (((f(42): empty): T).p: empty);
                               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:32:4

Error: expression.js:32
 32: (((f(42): empty): T).p: empty);
        ^^^^^ Cannot cast `f(...)` to empty because mixed [1] is incompatible with empty [2].
  References:
    9: const f = (x: mixed): mixed => x;
                             ^^^^^ [1]: mixed
   32: (((f(42): empty): T).p: empty);
                 ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:33:2

Error: expression.js:33
 33: (((class {}: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `class { ... }.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   33: (((class {}: empty): T).p: empty);
                                  ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:33:4

Error: expression.js:33
 33: (((class {}: empty): T).p: empty);
        ^^^^^^^^ Cannot cast `class { ... }` to empty because statics of `<<anonymous class>>` [1] is incompatible with empty [2].
  References:
   33: (((class {}: empty): T).p: empty);
          ^^^^^^^^ [1]: statics of `<<anonymous class>>`
   33: (((class {}: empty): T).p: empty);
                    ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:34:2

Error: expression.js:34
 34: (((1 ? 2 : 3: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `(1 ? 2 : 3).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   34: (((1 ? 2 : 3: empty): T).p: empty);
                                   ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:34:8

Error: expression.js:34
 34: (((1 ? 2 : 3: empty): T).p: empty);
            ^ Cannot cast `1 ? 2 : 3` to empty because number [1] is incompatible with empty [2].
  References:
   34: (((1 ? 2 : 3: empty): T).p: empty);
              ^ [1]: number
   34: (((1 ? 2 : 3: empty): T).p: empty);
                     ^^^^^ [2]: empty

Error ------------------------------------------------------ expression.js:34:12

Error: expression.js:34
 34: (((1 ? 2 : 3: empty): T).p: empty);
                ^ Cannot cast `1 ? 2 : 3` to empty because number [1] is incompatible with empty [2].
  References:
   34: (((1 ? 2 : 3: empty): T).p: empty);
                  ^ [1]: number
   34: (((1 ? 2 : 3: empty): T).p: empty);
                     ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:35:2

Error: expression.js:35
 35: ((((1 ? 2 : 3) ? 4 : 5: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `((1 ? 2 : 3) ? 4 : 5).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   35: ((((1 ? 2 : 3) ? 4 : 5: empty): T).p: empty);
                                             ^^^^^ [2]: empty

Error ------------------------------------------------------ expression.js:35:18

Error: expression.js:35
 35: ((((1 ? 2 : 3) ? 4 : 5: empty): T).p: empty);
                      ^ Cannot cast `(1 ? 2 : 3) ? 4 : 5` to empty because number [1] is incompatible with empty [2].
  References:
   35: ((((1 ? 2 : 3) ? 4 : 5: empty): T).p: empty);
                        ^ [1]: number
   35: ((((1 ? 2 : 3) ? 4 : 5: empty): T).p: empty);
                               ^^^^^ [2]: empty

Error ------------------------------------------------------ expression.js:35:22

Error: expression.js:35
 35: ((((1 ? 2 : 3) ? 4 : 5: empty): T).p: empty);
                          ^ Cannot cast `(1 ? 2 : 3) ? 4 : 5` to empty because number [1] is incompatible with empty [2].
  References:
   35: ((((1 ? 2 : 3) ? 4 : 5: empty): T).p: empty);
                            ^ [1]: number
   35: ((((1 ? 2 : 3) ? 4 : 5: empty): T).p: empty);
                               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:36:2

Error: expression.js:36
 36: (((function() {}: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `function () { ... }.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   36: (((function() {}: empty): T).p: empty);
                                       ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:36:4

Error: expression.js:36
 36: (((function() {}: empty): T).p: empty);
        ^^^^^^^^^^ Cannot cast function to empty because function [1] is incompatible with empty [2].
  References:
   36: (((function() {}: empty): T).p: empty);
          ^^^^^^^^^^ [1]: function
   36: (((function() {}: empty): T).p: empty);
                         ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:37:2

Error: expression.js:37
 37: (((a: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^ Cannot cast `a.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   37: (((a: empty): T).p: empty);
                           ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:37:4

Error: expression.js:37
 37: (((a: empty): T).p: empty);
        ^ Cannot cast `a` to empty because number [1] is incompatible with empty [2].
  References:
   25: ((((a = a = 42): empty): T).p: empty);
                   ^^ [1]: number
   37: (((a: empty): T).p: empty);
             ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:38:2

Error: expression.js:38
 38: (((import('fs'): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `import('fs').p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   38: (((import('fs'): empty): T).p: empty);
                                      ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:38:4

Error: expression.js:38
 38: (((import('fs'): empty): T).p: empty);
        ^^^^^^^^^^^^ Cannot cast `import('fs')` to empty because `Promise` [1] is incompatible with empty [2].
  References:
   38: (((import('fs'): empty): T).p: empty);
          ^^^^^^^^^^^^ [1]: `Promise`
   38: (((import('fs'): empty): T).p: empty);
                        ^^^^^ [2]: empty

Error ------------------------------------------------------ expression.js:38:11

Error: expression.js:38
 38: (((import('fs'): empty): T).p: empty);
               ^^^^ Cannot resolve module `fs`.

Error ------------------------------------------------------- expression.js:39:2

Error: expression.js:39
 39: (((<MyComponent />: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `<MyComponent />.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   39: (((<MyComponent />: empty): T).p: empty);
                                         ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:39:4

Error: expression.js:39
 39: (((<MyComponent />: empty): T).p: empty);
        ^^^^^^^^^^^^^^^ Cannot resolve name `React$Element`.

Error ------------------------------------------------------- expression.js:39:4

Error: expression.js:39
 39: (((<MyComponent />: empty): T).p: empty);
        ^^^^^^^^^^^^^^^ Cannot resolve name `React$Key`.

Error ------------------------------------------------------- expression.js:39:4

Error: expression.js:39
 39: (((<MyComponent />: empty): T).p: empty);
        ^^^^^^^^^^^^^^^ Cannot resolve name `React$Node`.

Error ------------------------------------------------------- expression.js:39:4

Error: expression.js:39
 39: (((<MyComponent />: empty): T).p: empty);
        ^^^^^^^^^^^^^^^ Cannot resolve name `React$Ref`.

Error ------------------------------------------------------- expression.js:40:2

Error: expression.js:40
 40: (((<>foo</>: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `<>...</>.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   40: (((<>foo</>: empty): T).p: empty);
                                  ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:40:4

Error: expression.js:40
 40: (((<>foo</>: empty): T).p: empty);
        ^^ Cannot get `React.Fragment` because property `Fragment` is missing in object type [1].
  References:
   12: declare var React: {createElement: React$CreateElement};
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: object type

Error ------------------------------------------------------- expression.js:40:4

Error: expression.js:40
 40: (((<>foo</>: empty): T).p: empty);
        ^^ Cannot resolve name `React$Key`.

Error ------------------------------------------------------- expression.js:40:4

Error: expression.js:40
 40: (((<>foo</>: empty): T).p: empty);
        ^^ Cannot resolve name `React$Ref`.

Error ------------------------------------------------------- expression.js:40:4

Error: expression.js:40
 40: (((<>foo</>: empty): T).p: empty);
        ^^^^^^^^ Cannot resolve name `React$Element`.

Error ------------------------------------------------------- expression.js:41:2

Error: expression.js:41
 41: ((('foo': empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^ Cannot cast `'foo'.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   41: ((('foo': empty): T).p: empty);
                               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:41:4

Error: expression.js:41
 41: ((('foo': empty): T).p: empty);
        ^^^^^ Cannot cast `'foo'` to empty because string [1] is incompatible with empty [2].
  References:
   41: ((('foo': empty): T).p: empty);
          ^^^^^ [1]: string
   41: ((('foo': empty): T).p: empty);
                 ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:42:2

Error: expression.js:42
 42: ((('abcdefghijklmnopqrstuvwxyz': empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `'abcdefghij...'.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   42: ((('abcdefghijklmnopqrstuvwxyz': empty): T).p: empty);
                                                      ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:42:4

Error: expression.js:42
 42: ((('abcdefghijklmnopqrstuvwxyz': empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `'abcdefghij...'` to empty because string [1] is incompatible with empty [2].
  References:
   42: ((('abcdefghijklmnopqrstuvwxyz': empty): T).p: empty);
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: string
   42: ((('abcdefghijklmnopqrstuvwxyz': empty): T).p: empty);
                                        ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:43:2

Error: expression.js:43
 43: (((42: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^ Cannot cast `42.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   43: (((42: empty): T).p: empty);
                            ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:43:4

Error: expression.js:43
 43: (((42: empty): T).p: empty);
        ^^ Cannot cast `42` to empty because number [1] is incompatible with empty [2].
  References:
   43: (((42: empty): T).p: empty);
          ^^ [1]: number
   43: (((42: empty): T).p: empty);
              ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:44:2

Error: expression.js:44
 44: (((true: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^ Cannot cast `true.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   44: (((true: empty): T).p: empty);
                              ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:44:4

Error: expression.js:44
 44: (((true: empty): T).p: empty);
        ^^^^ Cannot cast `true` to empty because boolean [1] is incompatible with empty [2].
  References:
   44: (((true: empty): T).p: empty);
          ^^^^ [1]: boolean
   44: (((true: empty): T).p: empty);
                ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:45:2

Error: expression.js:45
 45: (((false: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^ Cannot cast `false.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   45: (((false: empty): T).p: empty);
                               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:45:4

Error: expression.js:45
 45: (((false: empty): T).p: empty);
        ^^^^^ Cannot cast `false` to empty because boolean [1] is incompatible with empty [2].
  References:
   45: (((false: empty): T).p: empty);
          ^^^^^ [1]: boolean
   45: (((false: empty): T).p: empty);
                 ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:46:2

Error: expression.js:46
 46: (((null: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^ Cannot cast `null.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   46: (((null: empty): T).p: empty);
                              ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:46:4

Error: expression.js:46
 46: (((null: empty): T).p: empty);
        ^^^^ Cannot cast `null` to empty because null [1] is incompatible with empty [2].
  References:
   46: (((null: empty): T).p: empty);
          ^^^^ [1]: null
   46: (((null: empty): T).p: empty);
                ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:47:2

Error: expression.js:47
 47: (((o.p: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^ Cannot cast `o.p.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   47: (((o.p: empty): T).p: empty);
                             ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:47:4

Error: expression.js:47
 47: (((o.p: empty): T).p: empty);
        ^^^ Cannot cast `o.p` to empty because number [1] is incompatible with empty [2].
  References:
   10: const o = {p: 42};
                     ^^ [1]: number
   47: (((o.p: empty): T).p: empty);
               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:48:2

Error: expression.js:48
 48: (((new f(): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `new f().p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   48: (((new f(): empty): T).p: empty);
                                 ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:48:4

Error: expression.js:48
 48: (((new f(): empty): T).p: empty);
        ^^^^^^^ Cannot cast `new f()` to empty because new object [1] is incompatible with empty [2].
  References:
   48: (((new f(): empty): T).p: empty);
          ^^^^^^^ [1]: new object
   48: (((new f(): empty): T).p: empty);
                   ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:49:2

Error: expression.js:49
 49: (((new f(42): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `new f(...).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   49: (((new f(42): empty): T).p: empty);
                                   ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:49:4

Error: expression.js:49
 49: (((new f(42): empty): T).p: empty);
        ^^^^^^^^^ Cannot cast `new f(...)` to empty because new object [1] is incompatible with empty [2].
  References:
   49: (((new f(42): empty): T).p: empty);
          ^^^^^^^^^ [1]: new object
   49: (((new f(42): empty): T).p: empty);
                     ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:50:2

Error: expression.js:50
 50: ((({}: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^ Cannot cast `{...}.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   50: ((({}: empty): T).p: empty);
                            ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:50:4

Error: expression.js:50
 50: ((({}: empty): T).p: empty);
        ^^ Cannot cast object literal to empty because object literal [1] is incompatible with empty [2].
  References:
   50: ((({}: empty): T).p: empty);
          ^^ [1]: object literal
   50: ((({}: empty): T).p: empty);
              ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:51:2

Error: expression.js:51
 51: ((((1, 2, 3): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `3.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   51: ((((1, 2, 3): empty): T).p: empty);
                                   ^^^^^ [2]: empty

Error ------------------------------------------------------ expression.js:51:11

Error: expression.js:51
 51: ((((1, 2, 3): empty): T).p: empty);
               ^ Cannot cast `3` to empty because number [1] is incompatible with empty [2].
  References:
   51: ((((1, 2, 3): empty): T).p: empty);
                 ^ [1]: number
   51: ((((1, 2, 3): empty): T).p: empty);
                     ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:56:6

Error: expression.js:56
 56:     (((super.m: empty): T).p: empty);
          ^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `super.m.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   56:     (((super.m: empty): T).p: empty);
                                     ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:56:8

Error: expression.js:56
 56:     (((super.m: empty): T).p: empty);
            ^^^^^^^ Cannot cast `super.m` to empty because function [1] is incompatible with empty [2].
  References:
   53:   m() {}
         ^^^^^^ [1]: function
   56:     (((super.m: empty): T).p: empty);
                       ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:59:2

Error: expression.js:59
 59: (((f`foobar`: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `f`...`.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   59: (((f`foobar`: empty): T).p: empty);
                                   ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:59:4

Error: expression.js:59
 59: (((f`foobar`: empty): T).p: empty);
        ^^^^^^^^^ Cannot cast template string to empty because mixed [1] is incompatible with empty [2].
  References:
    9: const f = (x: mixed): mixed => x;
                             ^^^^^ [1]: mixed
   59: (((f`foobar`: empty): T).p: empty);
                     ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:60:2

Error: expression.js:60
 60: (((`foobar`: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast ``...`.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   60: (((`foobar`: empty): T).p: empty);
                                  ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:60:4

Error: expression.js:60
 60: (((`foobar`: empty): T).p: empty);
        ^^^^^^^^ Cannot cast template string to empty because string [1] is incompatible with empty [2].
  References:
   60: (((`foobar`: empty): T).p: empty);
          ^^^^^^^^ [1]: string
   60: (((`foobar`: empty): T).p: empty);
                    ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:62:4

Error: expression.js:62
 62:   (((this: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^ Cannot cast `this.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   62:   (((this: empty): T).p: empty);
                                ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:64:2

Error: expression.js:64
 64: ((((42: string): empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `42.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   64: ((((42: string): empty): T).p: empty);
                                      ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:64:5

Error: expression.js:64
 64: ((((42: string): empty): T).p: empty);
         ^^ Cannot cast `42` to string because number [1] is incompatible with string [2].
  References:
   64: ((((42: string): empty): T).p: empty);
           ^^ [1]: number
   64: ((((42: string): empty): T).p: empty);
               ^^^^^^ [2]: string

Error ------------------------------------------------------- expression.js:64:9

Error: expression.js:64
 64: ((((42: string): empty): T).p: empty);
             ^^^^^^ Cannot cast `42` to empty because string [1] is incompatible with empty [2].
  References:
   64: ((((42: string): empty): T).p: empty);
               ^^^^^^ [1]: string
   64: ((((42: string): empty): T).p: empty);
                        ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:65:2

Error: expression.js:65
 65: (((-42: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^ Cannot cast `(-42).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   65: (((-42: empty): T).p: empty);
                             ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:65:4

Error: expression.js:65
 65: (((-42: empty): T).p: empty);
        ^^^ Cannot cast `-42` to empty because number [1] is incompatible with empty [2].
  References:
   65: (((-42: empty): T).p: empty);
          ^^^ [1]: number
   65: (((-42: empty): T).p: empty);
               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:66:2

Error: expression.js:66
 66: (((!42: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^ Cannot cast `(!42).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   66: (((!42: empty): T).p: empty);
                             ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:66:4

Error: expression.js:66
 66: (((!42: empty): T).p: empty);
        ^^^ Cannot cast `!42` to empty because boolean literal `false` [1] is incompatible with empty [2].
  References:
   66: (((!42: empty): T).p: empty);
          ^^^ [1]: boolean literal `false`
   66: (((!42: empty): T).p: empty);
               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:67:2

Error: expression.js:67
 67: (((++a: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^ Cannot cast `(++a).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   67: (((++a: empty): T).p: empty);
                             ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:67:4

Error: expression.js:67
 67: (((++a: empty): T).p: empty);
        ^^^ Cannot cast `++a` to empty because number [1] is incompatible with empty [2].
  References:
   67: (((++a: empty): T).p: empty);
          ^^^ [1]: number
   67: (((++a: empty): T).p: empty);
               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:68:2

Error: expression.js:68
 68: (((a++: empty): T).p: empty);
      ^^^^^^^^^^^^^^^^^^^ Cannot cast `(a++).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   68: (((a++: empty): T).p: empty);
                             ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:68:4

Error: expression.js:68
 68: (((a++: empty): T).p: empty);
        ^^^ Cannot cast `a++` to empty because number [1] is incompatible with empty [2].
  References:
   68: (((a++: empty): T).p: empty);
          ^^^ [1]: number
   68: (((a++: empty): T).p: empty);
               ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:70:4

Error: expression.js:70
 70:   (((yield: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^ Cannot cast `yield.p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   70:   (((yield: empty): T).p: empty);
                                 ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:70:6

Error: expression.js:70
 70:   (((yield: empty): T).p: empty);
          ^^^^^ Cannot cast `yield` to empty because number [1] is incompatible with empty [2].
  References:
   69: function* g1(): Generator<number | void, void, number> {
                                                      ^^^^^^ [1]: number
   70:   (((yield: empty): T).p: empty);
                   ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:71:4

Error: expression.js:71
 71:   (((yield 42: empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `(yield 42).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   71:   (((yield 42: empty): T).p: empty);
                                    ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:71:6

Error: expression.js:71
 71:   (((yield 42: empty): T).p: empty);
          ^^^^^^^^ Cannot cast `yield 42` to empty because number [1] is incompatible with empty [2].
  References:
   69: function* g1(): Generator<number | void, void, number> {
                                                      ^^^^^^ [1]: number
   71:   (((yield 42: empty): T).p: empty);
                      ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:74:4

Error: expression.js:74
 74:   (((yield* g1(): empty): T).p: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `(yield* g1()).p` to empty because mixed [1] is incompatible with empty [2].
  References:
    6: type T = {p: mixed};
                    ^^^^^ [1]: mixed
   74:   (((yield* g1(): empty): T).p: empty);
                                       ^^^^^ [2]: empty

Error ------------------------------------------------------- expression.js:74:6

Error: expression.js:74
 74:   (((yield* g1(): empty): T).p: empty);
          ^^^^^^^^^^^ Cannot cast `yield* g1()` to empty because undefined [1] is incompatible with empty [2].
  References:
   69: function* g1(): Generator<number | void, void, number> {
                                                ^^^^ [1]: undefined
   74:   (((yield* g1(): empty): T).p: empty);
                         ^^^^^ [2]: empty


Found 107 errors
